--- a/PZ17/SubWindows/ClientsWindow.axaml
+++ b/PZ17/SubWindows/ClientsWindow.axaml
@@ -7,15 +7,19 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         MinWidth="800" MinHeight="450"
         x:Class="PZ17.SubWindows.ClientsWindow"
+        x:DataType="vm:ClientsWindowViewModel"
         Title="ClientsWindow">
     <Design.DataContext>
         <vm:ClientsWindowViewModel />
     </Design.DataContext>
-    <DataGrid x:CompileBindings="False" ItemsSource="{Binding Users}">
-        <DataGrid.Columns>
-            <DataGridTextColumn Header="Код" Binding="{Binding ClientId}" />
-            <DataGridTextColumn Header="Фамилия" Binding="{Binding LastName}" />
-            <DataGridTextColumn Header="Имя" Binding="{Binding FirstName}" />
-        </DataGrid.Columns>
-    </DataGrid>
+    <DockPanel LastChildFill="True">
+        <TextBox Text="{Binding SearchQuery, Mode=TwoWay}" DockPanel.Dock="Top"/>
+        <DataGrid x:CompileBindings="False" ItemsSource="{Binding Users}">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Код" Binding="{Binding ClientId}" />
+                <DataGridTextColumn Header="Фамилия" Binding="{Binding LastName}" />
+                <DataGridTextColumn Header="Имя" Binding="{Binding FirstName}" />
+            </DataGrid.Columns>
+        </DataGrid>
+    </DockPanel>
 </Window>
