--- a/PZ17/SubWindows/ProceduresWindow.axaml
+++ b/PZ17/SubWindows/ProceduresWindow.axaml
@@ -6,15 +6,19 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         MinWidth="800" MinHeight="450"
         x:Class="PZ17.SubWindows.ProceduresWindow"
+        x:DataType="vm:ProceduresWindowViewModel"
         Title="ProceduresWindow">
     <Design.DataContext>
         <vm:ProceduresWindowViewModel />
     </Design.DataContext>
-    <DataGrid x:CompileBindings="False" ItemsSource="{Binding Procedures}">
-        <DataGrid.Columns>
-            <DataGridTextColumn Header="Код" Binding="{Binding ProcedureId}" />
-            <DataGridTextColumn Header="Название" Binding="{Binding ProcedureName}" />
-            <DataGridTextColumn Header="Базированная цена" Binding="{Binding BasePrice}" />
-        </DataGrid.Columns>
-    </DataGrid>
+    <DockPanel LastChildFill="True">
+        <TextBox Text="{Binding SearchQuery, Mode=TwoWay}" DockPanel.Dock="Top" />
+        <DataGrid x:CompileBindings="False" ItemsSource="{Binding Procedures, Mode=TwoWay}">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Код" Binding="{Binding ProcedureId}" />
+                <DataGridTextColumn Header="Название" Binding="{Binding ProcedureName}" />
+                <DataGridTextColumn Header="Базированная цена" Binding="{Binding BasePrice}" />
+            </DataGrid.Columns>
+        </DataGrid>
+    </DockPanel>
 </Window>
