--- a/PZ17/SubWindows/ProceduresClientsWindow.axaml
+++ b/PZ17/SubWindows/ProceduresClientsWindow.axaml
@@ -6,17 +6,30 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         MinWidth="800" MinHeight="450"
         x:Class="PZ17.SubWindows.ProceduresClientsWindow"
+        x:DataType="vm:ProceduresClientsWindowViewModel"
         Title="ProceduresClientsWindow">
     <Design.DataContext>
         <vm:ProceduresClientsWindowViewModel />
     </Design.DataContext>
-    <DataGrid x:CompileBindings="False" ItemsSource="{Binding ProceduresClients}">
-        <DataGrid.Columns>
-            <DataGridTextColumn Header="Код" Binding="{Binding Id}" />
-            <DataGridTextColumn Header="Код процедуры" Binding="{Binding ProcedureId}" />
-            <DataGridTextColumn Header="Код клиента" Binding="{Binding ClientId}" />
-            <DataGridTextColumn Header="Цена" Binding="{Binding Price}" />
-            <DataGridTextColumn Header="Дата" Binding="{Binding Date}" />
-        </DataGrid.Columns>
-    </DataGrid>
+    <DockPanel LastChildFill="True">
+        <TextBox Text="{Binding SearchQuery, Mode=TwoWay}" DockPanel.Dock="Top"/>
+        <DataGrid IsReadOnly="True" ItemsSource="{Binding ProceduresClients}">
+            <DataGrid.Columns>
+                <DataGridTextColumn Header="Код" Binding="{Binding Id}" />
+                <DataGridTextColumn Header="Код процедуры" Binding="{Binding ProcedureId}" MinWidth="10"/>
+                <DataGridTextColumn Header="Процедура" Binding="{Binding Procedure.ProcedureName}" />
+                <DataGridTextColumn Header="Код клиента" Binding="{Binding ClientId}" />
+                <DataGridTextColumn Header="Клиент">
+                <DataGridTextColumn.Binding>
+                    <MultiBinding StringFormat="{}{0} {1}" Mode="OneWay">
+                        <Binding Path="Client.LastName" />
+                        <Binding Path="Client.FirstName" />
+                    </MultiBinding>
+                </DataGridTextColumn.Binding>
+                </DataGridTextColumn>
+                <DataGridTextColumn Header="Цена" Binding="{Binding Price}" />
+                <DataGridTextColumn Header="Дата" Binding="{Binding Date}" />
+            </DataGrid.Columns>
+        </DataGrid>
+    </DockPanel>
 </Window>
